--- a/backend/SmartHome/SmartHome/Views/Shared/_Layout.cshtml
+++ b/backend/SmartHome/SmartHome/Views/Shared/_Layout.cshtml
@@ -19,12 +19,12 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="LoggedIn" asp-action="RoomSelection">Room Selection</a>
                         </li>
                     </ul>
+                </div>
+                <div class="form-inline my-2 my-lg-0">
+                    <a asp-area="" asp-controller="LoggedIn" asp-action="Logout">Logout</a>
                 </div>
             </div>
         </nav>
