removed authorization, added crud for house

--- a/backend/SmartHome/SmartHome/Views/Home/Index.cshtml
+++ b/backend/SmartHome/SmartHome/Views/Home/Index.cshtml
@@ -44,6 +44,7 @@
 
                 </form>
             }
+            <a class="btn btn-secondary" asp-action="Index" asp-controller="Houses">View Home</a>
         </main>
     </div>
 
