--- a/backend/SmartHome/SmartHome/Views/Houses/Details.cshtml
+++ b/backend/SmartHome/SmartHome/Views/Houses/Details.cshtml
@@ -7,20 +7,41 @@
 
 <h1>Details</h1>
 
+<a asp-area="" asp-controller="LoggedIn" asp-action="RoomNew">New Room</a>
+<br />
+<table class="table table-hover">
+    <thead>
+        <tr>
+            <th scope="col">Room</th>
+            <th scope="col"></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th scope="row">Kitchen</th>
+            <td style="text-align: right;">
+                <a asp-area="" asp-controller="LoggedIn" asp-action="Room" asp-route-id="10">select</a> |
+                <a asp-area="" asp-controller="LoggedIn" asp-action="RoomUpd" asp-route-id="10" disabled>update</a> |
+                <a asp-area="" asp-controller="LoggedIn" asp-action="RoomDel" asp-route-id="10" disabled>delete</a>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
 <div>
     <h4>House</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Address)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Address)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Owner)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Owner.Password)
         </dd>
     </dl>
