--- a/backend/SmartHome/SmartHome/Views/Device/RoomDeviceList.cshtml
+++ b/backend/SmartHome/SmartHome/Views/Device/RoomDeviceList.cshtml
@@ -1,11 +1,11 @@
 ﻿
 @{
-    ViewData["Title"] = "Room";
+    ViewData["Title"] = "Room Device List";
 }
 
-    <h1>Room (@ViewData["RoomID"])</h1>
+<h1>Room Device List</h1>
 
-<a asp-area="" asp-controller="LoggedIn" asp-action="DeviceNew">New Device</a>
+<a asp-area="" asp-controller="Device" asp-action="OpenAddDeviceWindow">New Device</a> | <a asp-area="" asp-controller="Scenario" asp-action="AddScenario">New Scenario</a>
 <br />
 <ul class="list-group">
     <li class="list-group-item">Item <span class="badge" style="float: right;"><div class="custom-control custom-switch"><input type="checkbox" class="custom-control-input" id="customSwitch1"><label class="custom-control-label" for="customSwitch1"></label></div></span></li>
