--- a/backend/SmartHome/SmartHome/Views/Shared/_Layout.cshtml
+++ b/backend/SmartHome/SmartHome/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SmartHome</a>
+                <a class="navbar-brand" asp-area="" asp-controller="User" asp-action="Home">SmartHome</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,12 +19,12 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="LoggedIn" asp-action="RoomSelection">Room Selection</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Room" asp-action="RoomList">Room Selection</a>
                         </li>
                     </ul>
                 </div>
                 <div class="form-inline my-2 my-lg-0">
-                    <a asp-area="" asp-controller="LoggedIn" asp-action="Logout">Logout</a>
+                    <a asp-area="" asp-controller="User" asp-action="Logout">Logout</a>
                 </div>
             </div>
         </nav>
