--- a/backend/SmartHome/SmartHome/Views/Houses/Details.cshtml
+++ b/backend/SmartHome/SmartHome/Views/Houses/Details.cshtml
@@ -7,7 +7,7 @@
 
 <h1>Details</h1>
 
-<a asp-area="" asp-controller="LoggedIn" asp-action="RoomNew">New Room</a>
+<a asp-controller="Room" asp-action="Create">Add Room</a>
 <br />
 <table class="table table-hover">
     <thead>
@@ -17,15 +17,18 @@
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <th scope="row">Kitchen</th>
-            <td style="text-align: right;">
-                <a asp-area="" asp-controller="LoggedIn" asp-action="Room" asp-route-id="10">select</a> |
-                <a asp-area="" asp-controller="LoggedIn" asp-action="RoomUpd" asp-route-id="10" disabled>update</a> |
-                <a asp-area="" asp-controller="LoggedIn" asp-action="RoomDel" asp-route-id="10" disabled>delete</a>
-            </td>
-        </tr>
-    </tbody>
+        @foreach (var room in Model.Rooms)
+        {
+            <tr>
+                <th scope="row">@Html.DisplayFor(roomItem => room.Name)</th>
+                <td style="text-align: right;">
+                    <a asp-area="" asp-controller="Rooms" asp-action="Details" asp-route-id="10">select</a> |
+                    <a asp-area="" asp-controller="Rooms" asp-action="Edit" asp-route-id="10" disabled>update</a> |
+                    <a asp-area="" asp-controller="Rooms" asp-action="Delete" asp-route-id="10" disabled>delete</a>
+                </td>
+            </tr>
+        }
+        </tbody>
 </table>
 
 <div>
