--- a/backend/SmartHome/SmartHome/Views/Room/RoomAdd.cshtml
+++ b/backend/SmartHome/SmartHome/Views/Room/RoomAdd.cshtml
@@ -8,7 +8,7 @@
 
 @using (Html.BeginForm())
 {
-    <form class="text-center border border-light p-5" action="#!">
+    <form asp-action="CreateRoom" class="text-center border border-light p-5">
 
         @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control mb-4", @type = "text", @placeholder = "Room name..." } })
         @Html.ValidationMessageFor(model => model.Name)
