--- a/backend/SmartHome/SmartHome/Views/Room/RoomList.cshtml
+++ b/backend/SmartHome/SmartHome/Views/Room/RoomList.cshtml
@@ -5,7 +5,7 @@
 
 <h1>RoomList</h1>
 
-<a asp-controller="Rooms" asp-action="Create">Add Room</a>
+<a asp-controller="Room" asp-action="RoomAdd">Add Room</a>
 <br />
 <table class="table table-hover">
     <thead>
@@ -20,9 +20,9 @@
             <tr>
                 <th scope="row">@Html.DisplayFor(roomItem => room.Name)</th>
                 <td style="text-align: right;">
-                    <a asp-area="" asp-controller="Rooms" asp-action="Details" asp-route-id="10">select</a> |
-                    <a asp-area="" asp-controller="Rooms" asp-action="Edit" asp-route-id="10" disabled>update</a> |
-                    <a asp-area="" asp-controller="Rooms" asp-action="Delete" asp-route-id="10" disabled>delete</a>
+                    <a asp-area="" asp-controller="Room" asp-action="Details" asp-route-id="10">select</a> |
+                    <a asp-area="" asp-controller="Room" asp-action="RoomEdit" asp-route-id="10" disabled>update</a> |
+                    <a asp-area="" asp-controller="Room" asp-action="Delete" asp-route-id="10" disabled>delete</a>
                 </td>
             </tr>
         }
