--- a/backend/SmartHome/SmartHome/Views/Room/RoomList.cshtml
+++ b/backend/SmartHome/SmartHome/Views/Room/RoomList.cshtml
@@ -5,7 +5,7 @@
 
 <h1>RoomList</h1>
 
-<a asp-controller="Room" asp-action="RoomAdd">Add Room</a>
+<a asp-controller="Room" asp-action="OpenRoomAddWindow">Add Room</a>
 <br />
 <table class="table table-hover">
     <thead>
