--- a/backend/SmartHome/SmartHome/Views/Device/RoomDeviceList.cshtml
+++ b/backend/SmartHome/SmartHome/Views/Device/RoomDeviceList.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<SmartHome.Models.Device>
 @{
     ViewData["Title"] = "Room Device List";
 }
@@ -8,7 +8,29 @@
 <a asp-area="" asp-controller="Device" asp-action="OpenAddDeviceWindow">New Device</a> | <a asp-area="" asp-controller="Scenario" asp-action="AddScenario">New Scenario</a>
 <br />
 <ul class="list-group">
-    <li class="list-group-item">Item <span class="badge" style="float: right;"><div class="custom-control custom-switch"><input type="checkbox" class="custom-control-input" id="customSwitch1"><label class="custom-control-label" for="customSwitch1"></label></div></span></li>
-    <li class="list-group-item">Item <span class="badge" style="float: right;"><div class="custom-control custom-switch"><input type="checkbox" class="custom-control-input" id="customSwitch2" checked><label class="custom-control-label" for="customSwitch2"></label></div></span></li>
-    <li class="list-group-item">Item <span class="badge" style="float: right;"><div class="custom-control custom-switch"><input type="checkbox" class="custom-control-input" id="customSwitch3" checked><label class="custom-control-label" for="customSwitch3"></label></div></span></li>
+    @foreach (var device in Model)
+    {
+    <li class="list-group-item">
+        @device.Name
+            <span class="badge" style="float: right;">
+                <div class="custom-control custom-switch">
+                    @if (device.State == DeviceState.Off)
+                    {
+                        <input type="checkbox" class="custom-control-input" id="customSwitch1"> @* reikia sutvarkyt switchus *@
+                        <label class="custom-control-label" for="customSwitch1"></label>
+                    }
+                    else if (device.State == DeviceState.On)
+                    {
+                        <input type="checkbox" class="custom-control-input" id="customSwitch1" checked>
+                        <label class="custom-control-label" for="customSwitch1"></label>
+                    }
+                    else
+                    {
+                        <span>broken</span>
+                    }
+                </div>
+            </span>
+                
+    </li>
+    }
 </ul>
