--- a/backend/SmartHome/SmartHome/Views/Room/RoomList.cshtml
+++ b/backend/SmartHome/SmartHome/Views/Room/RoomList.cshtml
@@ -10,7 +10,7 @@
 <table class="table table-hover">
     <thead>
         <tr>
-            <th scope="col">Room</th>
+            <th scope="col">@Html.DisplayNameFor(model => model.Name)</th>
             <th scope="col"></th>
         </tr>
     </thead>
