--- a/backend/SmartHome/SmartHome/Views/Device/AddDevice.cshtml
+++ b/backend/SmartHome/SmartHome/Views/Device/AddDevice.cshtml
@@ -5,15 +5,15 @@
 
 <h1>AddDevice</h1>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("CreateRoom", "Device", FormMethod.Post))
 {
     <form class="text-center border border-light p-5" action="#!">
-        @Html.TextBoxFor(model => model.RoomId, new { @Value = @ViewData["RoomID"] })
+        @*@Html.TextBoxFor(model => model.RoomId, new { @Value = @ViewData["RoomID"] })*@
 
-        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control mb-4", @type = "text", @placeholder = "Name..." } })
+        @Html.EditorFor(model => model.IpAddress, new { htmlAttributes = new { @class = "form-control mb-4", @type = "text", @placeholder = "Name..." } })
         @Html.ValidationMessageFor(model => model.Name)
 
-        @Html.EditorFor(model => model.Model, new { htmlAttributes = new { @class = "form-control mb-4", @type = "text", @placeholder = "Model..." } })
+        @Html.EditorFor(model => model.Port, new { htmlAttributes = new { @class = "form-control mb-4", @type = "number", @placeholder = "Model..." } })
         @Html.ValidationMessageFor(model => model.Model)
 
         <div>
