--- a/backend/SmartHome/SmartHome/Views/Device/AddDevice.cshtml
+++ b/backend/SmartHome/SmartHome/Views/Device/AddDevice.cshtml
@@ -7,13 +7,15 @@
 
 @using (Html.BeginForm("CreateRoom", "Device", FormMethod.Post))
 {
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <form class="text-center border border-light p-5" action="#!">
         @*@Html.TextBoxFor(model => model.RoomId, new { @Value = @ViewData["RoomID"] })*@
 
-        @Html.EditorFor(model => model.IpAddress, new { htmlAttributes = new { @class = "form-control mb-4", @type = "text", @placeholder = "Name..." } })
+        @Html.EditorFor(model => model.IpAddress, new { htmlAttributes = new { @class = "form-control mb-4", @type = "text", @placeholder = "Ip Address..." } })
         @Html.ValidationMessageFor(model => model.Name)
 
-        @Html.EditorFor(model => model.Port, new { htmlAttributes = new { @class = "form-control mb-4", @type = "number", @placeholder = "Model..." } })
+        @Html.EditorFor(model => model.Port, new { htmlAttributes = new { @class = "form-control mb-4", @type = "number", @placeholder = "Port..." } })
         @Html.ValidationMessageFor(model => model.Model)
 
         <div>
