--- a/SmartHome/Views/Device/AddDevice.cshtml
+++ b/SmartHome/Views/Device/AddDevice.cshtml
@@ -1,26 +1,26 @@
-﻿@model SmartHome.Models.Device
+﻿@model SmartHome.ViewModels.AddDeviceViewModel
 @{
     ViewData["Title"] = "AddDevice";
 }
 
 <h1>AddDevice</h1>
 
-@using (Html.BeginForm("CreateRoom", "Device", FormMethod.Post))
+@using (Html.BeginForm("AddDevice", "Device", FormMethod.Post, new { deviceData = Model }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <form class="text-center border border-light p-5" action="#!">
-        @*@Html.TextBoxFor(model => model.RoomId, new { @Value = @ViewData["RoomID"] })*@
+    @*@Html.TextBoxFor(model => model.RoomId, new { @Value = @ViewData["RoomID"] })*@
+    @Html.HiddenFor(model => model.RoomID)
 
-        @Html.EditorFor(model => model.IpAddress, new { htmlAttributes = new { @class = "form-control mb-4", @type = "text", @placeholder = "Ip Address..." } })
-        @Html.ValidationMessageFor(model => model.Name)
+    @Html.EditorFor(model => model.IpAddress, new { htmlAttributes = new { @class = "form-control mb-4", @type = "text", @placeholder = "Ip Address..." } })
+    @Html.ValidationMessageFor(model => model.IpAddress)
 
-        @Html.EditorFor(model => model.Port, new { htmlAttributes = new { @class = "form-control mb-4", @type = "number", @placeholder = "Port..." } })
-        @Html.ValidationMessageFor(model => model.Model)
+    @Html.EditorFor(model => model.Port, new { htmlAttributes = new { @class = "form-control mb-4", @type = "number", @placeholder = "Port..." } })
+    @Html.ValidationMessageFor(model => model.Port)
 
-        <div>
-            <input type="submit" value="Add" class="btn btn-primary" />
-        </div>
 
-    </form>
+    <div>
+        <input type="submit" value="Add" class="btn btn-primary" />
+    </div>
+
 }
