--- a/SmartHome/Device/Views/RoomDeviceList.cshtml
+++ b/SmartHome/Device/Views/RoomDeviceList.cshtml
@@ -1,7 +1,9 @@
-﻿@model RoomDeviceListViewModel
+﻿@model SmartHome.ViewModels.RoomDeviceListViewModel
 @{
     ViewData["Title"] = "Room Device List";
 }
+
+@using SmartHome.Models;
 
 <h1>Room Device List</h1>
 
