--- a/SmartHome/Views/Shared/_Layout.cshtml
+++ b/SmartHome/Views/Shared/_Layout.cshtml
@@ -19,12 +19,12 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Room" asp-action="RoomList">Room Selection</a>
+                            <a class="nav-link text-dark" asp-area="Room" asp-controller="Room" asp-action="RoomList">Room Selection</a>
                         </li>
                     </ul>
                 </div>
                 <div class="form-inline my-2 my-lg-0">
-                    <a asp-area="" asp-controller="User" asp-action="Logout">Logout</a>
+                    <a asp-area="Resident" asp-controller="User" asp-action="Logout">Logout</a>
                 </div>
             </div>
         </nav>
