--- a/SmartHome/Areas/Room/Views/RoomList.cshtml
+++ b/SmartHome/Areas/Room/Views/RoomList.cshtml
@@ -21,9 +21,9 @@
             <tr>
                 <th scope="row">@Html.DisplayFor(roomItem => room.Name)</th>
                 <td style="text-align: right;">
-                    <a asp-controller="Device" asp-action="RoomDeviceList" asp-route-id="@room.Id">room device list</a>|
-                    <a asp-controller="Room" asp-action="RoomEdit" asp-route-id="@room.Id" disabled>update</a> |
-                    <a asp-controller="Room" asp-action="Delete" asp-route-id="@room.Id" disabled>delete</a>
+                    <a asp-area="" asp-controller="Device" asp-action="RoomDeviceList" asp-route-id="@room.Id">room device list</a>|
+                    <a asp-area="Room" asp-controller="Room" asp-action="RoomEdit" asp-route-id="@room.Id" disabled>update</a> |
+                    <a asp-area="Room" asp-controller="Room" asp-action="Delete" asp-route-id="@room.Id" disabled>delete</a>
                 </td>
             </tr>
         }
