--- a/SmartHome/Areas/Device/Views/RoomDeviceList.cshtml
+++ b/SmartHome/Areas/Device/Views/RoomDeviceList.cshtml
@@ -7,7 +7,7 @@
 
 <h1>Room Device List</h1>
 
-<a asp-controller="Device" asp-action="OpenAddDeviceWindow" asp-route-id="@Model.roomID" >New Device</a> | <a asp-controller="Scenario" asp-action="AddScenario">New Scenario</a>
+<a asp-area="Device" asp-controller="Device" asp-action="OpenAddDeviceWindow" asp-route-id="@Model.roomID" >New Device</a> | <a asp-area="Device" asp-controller="Scenario" asp-action="AddScenario">New Scenario</a>
 <br />
 <ul class="list-group">
     @foreach (var device in Model.Devices)
