all views working again

--- a/SmartHome/Areas/Device/Views/AddDevice.cshtml
+++ b/SmartHome/Areas/Device/Views/AddDevice.cshtml
@@ -1,6 +1,7 @@
 ﻿@model SmartHome.ViewModels.AddDeviceViewModel
 @{
     ViewData["Title"] = "AddDevice";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>AddDevice</h1>
