--- a/SmartHome/Areas/Device/Views/AddScenario.cshtml
+++ b/SmartHome/Areas/Device/Views/AddScenario.cshtml
@@ -1,6 +1,7 @@
 ﻿@model SmartHome.Models.Scenario
 @{
     ViewData["Title"] = "AddScenario";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>AddScenario</h1>
