--- a/SmartHome/Areas/Device/Views/RoomDeviceList.cshtml
+++ b/SmartHome/Areas/Device/Views/RoomDeviceList.cshtml
@@ -1,6 +1,7 @@
 ﻿@model SmartHome.ViewModels.RoomDeviceListViewModel
 @{
     ViewData["Title"] = "Room Device List";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @using SmartHome.Models;
