--- a/SmartHome/Areas/Resident/Views/Home.cshtml
+++ b/SmartHome/Areas/Resident/Views/Home.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SmartHome.Models.UserModel
 @{
-    Layout = "_Layout";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Home";
 }
 
