--- a/backend/SmartHome/Areas/Device/Views/AddScenario.cshtml
+++ b/backend/SmartHome/Areas/Device/Views/AddScenario.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartHome.Models.Scenario
+﻿@model SmartHome.Areas.ViewModels.AddScenarioViewModel;
 @{
     ViewData["Title"] = "AddScenario";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -8,20 +8,21 @@
 
 @using (Html.BeginForm("AddScenario", "Scenario", FormMethod.Post, new { scenarioData = Model }))
 {
-    <form class="text-center border border-light p-5" action="#!">
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        @Html.EditorFor(model => model.TimeOfEvent, new { htmlAttributes = new { @class = "form-control mb-4", @type = "datetime-local", @placeholder = "Room name..." } })
-        @Html.ValidationMessageFor(model => model.TimeOfEvent)
+    @Html.HiddenFor(model => model.RoomID)
 
-        @Html.EditorFor(model => model.EventURL, new { htmlAttributes = new { @class = "form-control mb-4", @type = "text", @placeholder = "Event URL..." } })
-        @Html.ValidationMessageFor(model => model.EventURL)
+    @Html.EditorFor(model => model.TimeOfEvent, new { htmlAttributes = new { @class = "form-control mb-4", @type = "datetime-local", @placeholder = "Time Of Event..." } })
+    @Html.ValidationMessageFor(model => model.TimeOfEvent)
 
-        @Html.EditorFor(model => model.DeviceId, new { htmlAttributes = new { @class = "form-control mb-4", @type = "number", @placeholder = "Device ID..." } })
-        @Html.ValidationMessageFor(model => model.DeviceId)
+    @Html.EditorFor(model => model.EventURL, new { htmlAttributes = new { @class = "form-control mb-4", @type = "text", @placeholder = "Event URL..." } })
+    @Html.ValidationMessageFor(model => model.EventURL)
 
-        <div>
-            <input type="submit" value="Add" class="btn btn-primary" />
-        </div>
+    @Html.EditorFor(model => model.DeviceId, new { htmlAttributes = new { @class = "form-control mb-4", @type = "number", @placeholder = "Device ID..." } })
+    @Html.ValidationMessageFor(model => model.DeviceId)
 
-    </form>
+    <div>
+        <input type="submit" value="Add" class="btn btn-primary" />
+    </div>
 }
